kubernetes-ashtonc-home/k8s.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ashtonc-home
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: ashtonc-home
    spec:
      containers:
      - name: ashtonc-home
        image: nginx:alpine
        imagePullPolicy: Always
        command: ["/bin/sh", "-c"]
        args:
          - "wget https://storage.googleapis.com/ashtonc.com/deploy/proxy.conf -O /etc/nginx/proxy.conf && \
            wget https://storage.googleapis.com/ashtonc.com/deploy/nginx.conf -O /etc/nginx/conf.d/default.conf && \
            nginx -g 'daemon off;'"
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "32Mi"
            cpu: "64m"
---
apiVersion: v1
kind: Service
metadata:
  name: ashtonc-home
  labels:
    app: ashtonc-home
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: ashtonc-home
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ashtonc-home
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ashtonc-home
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - ashtonc.com
    - www.ashtonc.com
    secretName: ashtonc-home-tls
  rules:
  - host: ashtonc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ashtonc-home
          servicePort: 80
  - host: www.ashtonc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ashtonc-home
          servicePort: 80
